Fixed content jump when expanding track listing on Releases page

--- a/src/containers/ReleaseTile/index.css
+++ b/src/containers/ReleaseTile/index.css
@@ -35,6 +35,7 @@
   font-size: 1em;
   background: none;
   outline: none;
+  display: flex;
 }
 
 .media {
@@ -48,23 +49,15 @@
   height: auto;
 }
 
-.tracks {
-  display: flex;
-  flex-direction: column;
-}
-
 .tracks.expanded ol{
   visibility: visible;
-  overflow: visible;
-  margin: 0;
-  padding-left: 4.5vh;
-  height: auto !important;
+  padding-left: 4vh;
 }
 
 .tracks.collapsed {
   visibility: hidden;
   height: 0;
-}
+} 
 
 .releaseBio {
   margin: 0;
@@ -90,7 +83,6 @@
   word-wrap: break-word;
   hyphens: auto;
   object-fit: contain;
-  height: auto;
   width: inherit;
   margin: 3vh;
   margin-left: 0;
